--- a/src/nexBit_frontend/package.json
+++ b/src/nexBit_frontend/package.json
@@ -11,19 +11,20 @@
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@dfinity/agent": "^1.4.0",
     "@dfinity/candid": "^1.4.0",
-    "@dfinity/principal": "^1.4.0"
+    "@dfinity/principal": "^1.4.0",
+    "@types/node": "^22.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.0.1",
     "dotenv": "^16.3.1",
     "sass": "^1.63.6",
-    "typescript": "^5.1.3",
+    "typescript": "^5.6.3",
     "vite": "^4.3.9",
     "vite-plugin-environment": "^1.1.3"
   }
