--- a/src/nexBit_frontend/package.json
+++ b/src/nexBit_frontend/package.json
@@ -11,9 +11,10 @@
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\""
   },
   "dependencies": {
-    "@dfinity/agent": "^1.4.0",
-    "@dfinity/candid": "^1.4.0",
-    "@dfinity/principal": "^1.4.0",
+    "@dfinity/agent": "^2.1.3",
+    "@dfinity/auth-client": "^2.1.3",
+    "@dfinity/candid": "^2.1.3",
+    "@dfinity/principal": "^2.1.3",
     "@types/node": "^22.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
