--- a/src/nexBit_frontend/package.json
+++ b/src/nexBit_frontend/package.json
@@ -16,6 +16,8 @@
     "@dfinity/candid": "^2.1.3",
     "@dfinity/principal": "^2.1.3",
     "@types/node": "^22.9.0",
+    "ic-use-actor": "^0.1.0",
+    "ic-use-internet-identity": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
