--- a/src/nexBit_frontend/package.json
+++ b/src/nexBit_frontend/package.json
@@ -15,6 +15,7 @@
     "@dfinity/auth-client": "^2.1.3",
     "@dfinity/candid": "^2.1.3",
     "@dfinity/principal": "^2.1.3",
+    "@tanstack/react-query": "^5.60.5",
     "@types/node": "^22.9.0",
     "ic-use-actor": "^0.1.0",
     "ic-use-internet-identity": "^0.1.0",
