--- a/src/nexBit_frontend/package.json
+++ b/src/nexBit_frontend/package.json
@@ -15,14 +15,20 @@
     "@dfinity/auth-client": "^2.1.3",
     "@dfinity/candid": "^2.1.3",
     "@dfinity/principal": "^2.1.3",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.60.5",
-    "@types/node": "^22.9.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "ic-use-actor": "^0.1.0",
     "ic-use-internet-identity": "^0.1.0",
+    "lucide-react": "^0.460.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.0.1",
