--- a/src/nexBit_frontend/package.json
+++ b/src/nexBit_frontend/package.json
@@ -17,6 +17,7 @@
     "@dfinity/principal": "^2.1.3",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.60.5",
