--- a/src/nexBit_frontend/package.json
+++ b/src/nexBit_frontend/package.json
@@ -28,6 +28,7 @@
     "lucide-react": "^0.460.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
