--- a/src/nexBit_frontend/package.json
+++ b/src/nexBit_frontend/package.json
@@ -43,10 +43,12 @@
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.3.1",
     "postcss": "^8.4.47",
+    "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.63.6",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
     "vite": "^4.3.9",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-environment": "^1.1.3"
   }
 }
