--- a/src/nexBit_frontend/package.json
+++ b/src/nexBit_frontend/package.json
@@ -1,21 +1,42 @@
 {
   "dependencies": {
-    "@dfinity/agent": "^1.4.0",
-    "@dfinity/candid": "^1.4.0",
-    "@dfinity/principal": "^1.4.0",
+    "@dfinity/agent": "^2.1.3",
+    "@dfinity/auth-client": "^2.1.3",
+    "@dfinity/candid": "^2.1.3",
+    "@dfinity/principal": "^2.1.3",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.1.4",
+    "@tanstack/react-query": "^5.61.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "ic-use-actor": "^0.1.0",
+    "ic-use-internet-identity": "^0.1.0",
+    "lucide-react": "^0.460.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^7.0.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/node": "^22.9.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
+    "autoprefixer": "^10.4.20",
     "cross-fetch": "^3.1.6",
     "dotenv": "^16.3.1",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.49",
     "sass": "^1.63.6",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-environment": "^1.1.3",
@@ -27,7 +48,7 @@
     "build": "tsc && vite build",
     "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\"",
     "prebuild": "dfx generate",
-    "setup": "npm i && dfx canister create nexBit_backend && dfx generate nexBit_backend && dfx deploy",
+    "setup": "npm i && dfx canister create basic_bitcoin && dfx generate basic_bitcoin && dfx deploy",
     "start": "vite --port 3000",
     "test": "vitest run"
   },
