--- a/src/nexBit_frontend/package.json
+++ b/src/nexBit_frontend/package.json
@@ -11,12 +11,14 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.61.0",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ic-use-actor": "^0.1.0",
     "ic-use-internet-identity": "^0.1.0",
     "lucide-react": "^0.460.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.0",
